# echo

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .tool-versions  00_README.md  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: PULL_REQUEST_TEMPLATE.md
Docs/: 01_Product_Vision.md  03_Product_Requirements.md  04_Game_Design.md  05_Technical_Architecture.md  07_AI_Agent_Implementation_Guide.md  11_Risk_Assessment.md  12_Investor_Pitch_Outline.md
docs/: 02_Market_Analysis.md  06_Tech_Stack.md  10_Roadmap_Milestones.md  (+2 more)
services/ml-py/: README.md  pyproject.toml
services/ml-py/app/: __init__.py  grpc_server.py  main.py
services/ml-py/app/grpc_gen/: portrait_gen_pb2.py  portrait_gen_pb2_grpc.py  reflection_gen_pb2.py  reflection_gen_pb2_grpc.py  trait_scoring_pb2.py  trait_scoring_pb2_grpc.py
services/ml-py/app/services/: __init__.py  portrait_gen.py  portrait_renderer.py  reflection_gen.py  reflection_templates.py  trait_scoring.py
services/ml-py/app/services/llm/: __init__.py  anthropic.py  base.py  errors.py  factory.py  mock.py  openai.py  routing.py  types.py
services/ml-py/app/services/reflection/: __init__.py  pipeline.py  prompt.py  safety.py  tone.py
services/ml-py/tests/: __init__.py  test_grpc_portrait_reflection.py  test_grpc_server.py  test_health.py  test_llm_routing.py  test_portrait_animation.py  test_portrait_gen.py  test_portrait_renderer_goldens.py  test_reflection_gen.py  test_reflection_pipeline.py  test_reflection_prompt.py  test_reflection_safety.py  test_reflection_templates.py  test_reflection_tone.py  test_stubs.py  test_trait_scoring.py
(+176 files in other folders)
